# IntelliFireCore

./: CMakeLists.txt  CODE_REVISION_GUIDELINES.md  IntelliFireChassisv12.stl  README.md  README_IRSensor.md  README_Sensors.md
.github/workflows/: cmake-single-platform.yml
Documentation/: ARTRituals.md  IntellifireEvents.pptx  Intro.md
IR Sensor/: CMakeLists.txt  README.md  ir_sensor.h
IR Sensor/example/: CMakeLists.txt  ir_sensor_printer.cpp
STL Files/: LowerBody.stl  TopBody.stl  UMS5_lower.ufp  UMS5_upper.ufp  lower.stl  upper.stl
SupportCodes/: LM393_SupportCode_README.md  LM393_SupportCode_Read.cpp  LN298N_SupportCode_README.md  LN298_SupportCode_Motor.cpp  differentialRobot.h  main2.cpp
include/: ADCReader.h  ADS1015rpi.h  IRSensor.h  LN298MotorControl.h  LN298MotorControlV2.h  LN298MotorControlV3.h  Logger.h  UltraSonicSensor.h  ads1015rpi.h  ads1115rpi.h  basicMotion.h  basicMotionV2.h  config.h  eventHandler.h  eventLoop.h  fireDetector.h  pumpControl.h  rpi_pwm.h
mediamtx_folder/: mediamtx.yml
mediamtx_scanner/: mediamtx_http_scanner.cpp
src/: ADS1015rpi.cpp  EventLoop.cpp  IRSensor.cpp  LN298MotorControl.cpp  LN298MotorControlV2.cpp  LN298MotorControlV3.cpp  Logger.cpp  UltraSonicSensor.cpp  ads1015rpi.cpp  ads1115rpi.cpp  basicMotion.cpp  basicMotionV2.cpp  basicMotionV3.cpp  fireDetector.cpp  main.cpp  pumpControl.cpp  rpi_pwm.cpp
src/GUI/: mainwindow.cpp
src/IntelliFireUI/: CMakeLists.txt  UltraSonicSensor.cpp  UltraSonicSensor.h  libcam2opencv.cpp  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  sensorContainer.cpp  sensorContainer.h  ultrasonicDistance.cpp  ultrasonicDistance.h
src/IntelliFireUI/include/: ads1115manager.h  keyLogger.h  ledindicator.h  libcam2opencv.h  mainwindow.h  sensorContainer.h
src/IntelliFireUI/src/: ads1115manager.cpp  keyLogger.cpp  sensorContainer.cpp
tests/: README.md  manualTestinglog.md  mediamtx_http_scanner.cpp  testFlameSensor.cpp  testIRSensor.cpp  testMotor.cpp  testUltraSonicSensor.cpp
tests/ADS1015/: CMakeLists.txt  multipleChannelsADC.cpp
tests/ADS1115/: CMakeLists.txt  multipleChannelsADC.cpp
tests/MultipleChannelsADC/: CMakeLists.txt  multipleChannelsADC.cpp
